Fix layout bug in header when meta items are not set.

--- a/css/breakpoints.css
+++ b/css/breakpoints.css
@@ -73,6 +73,10 @@
       padding: 0 20px 0 0;
     }
 
+    #header-meta .clear {
+      display: none;
+    }
+
     #header #logo {
       max-width: none;
     }
